--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19392,3 +19392,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 20, 430, 185
 }
 
+FacturaLineasAlbaranes DIALOG DISCARDABLE 79, -78, 672, 320
+STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Pedidos a Clientes"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 84, 10, 60, 11
+  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 10, 40, 11
+  CONTROL "", 210, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 23, 86, 11
+  CONTROL "", 310, "TXBrowse", WS_TABSTOP|0x00300000, 3, 66, 330, 230
+  CONTROL "", 320, "TXBrowse", WS_TABSTOP|0x00300000, 338, 66, 330, 230
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 563, 301, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 618, 301, 50, 14
+  CONTROL "Serie", -1, "Static", WS_GROUP, 338, 13, 30, 8
+  CONTROL "Fecha\r\n", -1, "Static", WS_GROUP, 338, 26, 25, 8
+  CONTROL "Porcentaje facturación", -1, "Static", WS_GROUP, 3, 13, 77, 8
+}
+
