Recursos en tactil

--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2378,7 +2378,7 @@ FONT 14, "Segoe UI"
   CONTROL "20", 180, "Button", WS_TABSTOP, 82, 69, 24, 16
   CONTROL "50", 170, "Button", WS_TABSTOP, 57, 69, 24, 16
   CONTROL "10", 190, "Button", WS_TABSTOP, 107, 69, 24, 16
-  CONTROL "C", 160, "Button", WS_TABSTOP, 132, 69, 24, 16
+  CONTROL "C", 160, "Button", WS_TABSTOP, 132, 85, 24, 16
   CONTROL "2", 210, "Button", WS_TABSTOP, 82, 85, 24, 16
   CONTROL "5", 200, "Button", WS_TABSTOP, 57, 85, 24, 16
   CONTROL "1", 220, "Button", WS_TABSTOP, 107, 85, 24, 16
@@ -2391,6 +2391,7 @@ FONT 14, "Segoe UI"
   CONTROL "", 290, "Button", WS_TABSTOP, 132, 117, 24, 16
   CONTROL "", 110, "Button", WS_TABSTOP, 107, 1, 24, 16
   CONTROL "", 300, "Button", WS_TABSTOP, 132, 101, 24, 16
+  CONTROL "", 310, "Button", WS_TABSTOP, 132, 69, 24, 16
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
