--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19392,7 +19392,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 20, 430, 185
 }
 
-FACTURALINEASALBARANES DIALOG DISCARDABLE 79, -78, 672, 328
+FACTURALINEASALBARANES DIALOG DISCARDABLE 79, -78, 672, 370
 STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Albaranes de clientes"
 FONT 8, "MS Sans Serif"
@@ -19402,8 +19402,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 435, 41, 60, 11
   CONTROL "", 110, "TXBrowse", WS_TABSTOP|0x00300000, 5, 56, 326, 230
   CONTROL "", 230, "TXBrowse", WS_TABSTOP|0x00300000, 340, 56, 326, 230
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 565, 310, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 620, 310, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 565, 353, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 620, 353, 50, 14
   CONTROL "Serie", -1, "Static", WS_GROUP, 340, 31, 30, 8
   CONTROL "Fecha\r\n", -1, "Static", WS_GROUP, 340, 44, 25, 8
   CONTROL "Porcentaje albarán", -1, "Static", WS_GROUP, 5, 18, 77, 8
@@ -19417,5 +19417,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Pasar todo >>", 120, "Button", WS_TABSTOP, 5, 289, 54, 14
   CONTROL "Pasar linea >", 130, "Button", WS_TABSTOP, 219, 289, 54, 14
   CONTROL "Pasar unidad >", 140, "Button", WS_TABSTOP, 277, 289, 54, 14
+  CONTROL "0", 270, "Static", SS_RIGHT|WS_GROUP, 585, 310, 80, 8
+  CONTROL "Neto", -1, "Static", WS_GROUP, 488, 310, 53, 8
+  CONTROL "0", 280, "Static", SS_RIGHT|WS_GROUP, 585, 322, 80, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 488, 322, 53, 8
+  CONTROL "Total", 291, "Static", WS_GROUP, 488, 335, 87, 16
+  CONTROL "0", 290, "Static", SS_RIGHT|WS_GROUP, 579, 335, 86, 16
 }
 
