iMPRESION DE SERIES

--- a/resource/Gstimage10.rc
+++ b/resource/Gstimage10.rc
@@ -30,3 +30,4 @@ User_Alpha_48 BITMAP "..\\bmp\\User_Alpha_48.bmp"
 Cube_Yellow_Alpha_48 BITMAP "..\\bmp\\cube_yellow_alpha_48.bmp"
 Star2_Red_Alpha_48 BITMAP "..\\bmp\\star2_red_alpha_48.bmp"
 Star_Yellow_48 BITMAP "..\\bmp\\Star_Yellow_48.bmp"
+Printer_alpha_48 BITMAP "..\\bmp\\printer_alpha_48.BMP"
