imprimir series de albaranes

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19448,7 +19448,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Hasta", -1, "Static", WS_GROUP, 23, 79, 35, 8
 }
 
-IMPRIMIRSERIES DIALOG DISCARDABLE 166, 121, 428, 238
+IMPRIMIRSERIES DIALOG DISCARDABLE 166, 121, 428, 240
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -19475,10 +19475,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 92, "TBtnBmp", 0x00000000, 407, 185, 12, 11
   CONTROL "", 160, "Edit", WS_BORDER, 122, 199, 284, 11
   CONTROL "", 161, "TBtnBmp", 0x00000000, 407, 199, 12, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 320, 218, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 375, 218, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 320, 221, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 375, 221, 50, 14
   CONTROL "Rango", -1, "Button", BS_GROUPBOX, 44, 29, 380, 116
-  CONTROL "Impresión", -1, "Button", BS_GROUPBOX, 44, 147, 380, 66
+  CONTROL "Impresión", -1, "Button", BS_GROUPBOX, 44, 147, 380, 68
   CONTROL "Desde número", -1, "Static", WS_GROUP, 50, 42, 51, 8
   CONTROL "Hasta número", -1, "Static", WS_GROUP, 50, 54, 49, 8
   CONTROL "Copias deseadas", -1, "Static", WS_GROUP, 50, 174, 59, 8
@@ -19492,5 +19492,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Hasta grupo cliente", -1, "Static", WS_GROUP, 50, 133, 67, 8
   CONTROL "Impresión de series de documentos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 116, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "", 400, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 44, 242, 380, 122
 }
 
