--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -19456,7 +19456,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Establecer filtros", -1, "Static", WS_GROUP, 44, 3, 57, 8
 }
 
-FastFiltros DIALOG DISCARDABLE 9, 8, 490, 294
+FASTFILTROS DIALOG DISCARDABLE 9, 8, 490, 294
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
@@ -19484,5 +19484,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 57, 4, 50, 14
   CONTROL "Guardar filtro", 110, "Button", WS_TABSTOP, 378, 4, 60, 14
   CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+EDITMEMO DIALOG DISCARDABLE 77, 58, 281, 116
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Edición de expresiones"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 4, 4, 272, 85
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 96, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 96, 50, 14
 }
 
