--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14549,25 +14549,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 151, "Edit", WS_BORDER, 161, 70, 194, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 82, 60, 11
   CONTROL "", 161, "Edit", WS_BORDER, 161, 82, 194, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 94, 100, 11
-  CONTROL "Imprimir frase publicitaria", 310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 105, 89, 10
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 113, 60, 11
-  CONTROL "", 321, "Edit", WS_BORDER, 161, 113, 194, 11
-  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 140, 106, 10
-  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 151, 107, 10
-  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 162, 79, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 174, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 185, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 196, 71, 10
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 107, 100, 11
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 94, 60, 11
+  CONTROL "", 321, "Edit", WS_BORDER, 161, 94, 194, 11
+  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 132, 106, 10
+  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 143, 107, 10
+  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 154, 79, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 166, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 177, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 188, 71, 10
   CONTROL "Nº Línea", -1, "Static", WS_GROUP, 5, 4, 30, 8
   CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 48, 80, 8
   CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 27, 66, 8
-  CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 59, 73, 8
+  CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 60, 73, 8
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 73, 55, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 5, 85, 55, 8
-  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 96, 24, 8
-  CONTROL "Frase publicitaria", -1, "Static", WS_GROUP, 5, 116, 69, 8
-  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 129, 192, 10
+  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 109, 24, 8
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 97, 69, 8
+  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 121, 192, 10
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
