--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4569,38 +4569,41 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 106, 70, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 265, 106, 37, 11
   CONTROL "", 171, "TBitmap", 0x00800000, 305, 106, 19, 11
-  CONTROL "Cobrado", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 135, 40, 10
-  CONTROL "", 230, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 134, 70, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 108, 161, 70, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 180, 161, 144, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 108, 174, 70, 11
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 174, 144, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 108, 187, 70, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 180, 187, 144, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 108, 200, 216, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 108, 213, 216, 11
-  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 108, 226, 216, 11
-  CONTROL "Concepto ", -1, "Static", WS_GROUP, 50, 204, 38, 8
+  CONTROL "Cobrado", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 134, 40, 10
+  CONTROL "", 230, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 133, 70, 11
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 145, 70, 11
+  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 145, 144, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 108, 173, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 180, 173, 144, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 108, 186, 70, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 186, 144, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 108, 199, 70, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 180, 199, 144, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 108, 212, 216, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 108, 225, 216, 11
+  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 108, 238, 216, 11
+  CONTROL "Concepto ", -1, "Static", WS_GROUP, 50, 216, 38, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 50, 79, 40, 8
   CONTROL "Vencimiento", -1, "Static", WS_GROUP, 50, 54, 44, 8
-  CONTROL "Pagado por", -1, "Static", WS_GROUP, 50, 216, 42, 8
+  CONTROL "Pagado por", -1, "Static", WS_GROUP, 50, 228, 42, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 50, 79, 26, 8
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX, 44, 29, 285, 36
   CONTROL "Importes", -1, "Button", BS_GROUPBOX, 44, 67, 285, 54
   CONTROL "Expedición", -1, "Static", WS_GROUP, 50, 41, 40, 8
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 50, 177, 27, 8
-  CONTROL "Agente", -1, "Static", WS_GROUP, 50, 190, 28, 8
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 50, 189, 27, 8
+  CONTROL "Agente", -1, "Static", WS_GROUP, 50, 202, 28, 8
   CONTROL "Gastos", -1, "Static", WS_GROUP, 50, 109, 40, 8
   CONTROL "Cobro", -1, "Static", WS_GROUP, 50, 92, 40, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 50, 102, 276, 1
-  CONTROL "Documento", -1, "Static", WS_GROUP, 50, 230, 42, 8
+  CONTROL "Documento", -1, "Static", WS_GROUP, 50, 242, 42, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 233, 109, 25, 8
-  CONTROL "Forma de pago", -1, "Static", WS_GROUP, 50, 164, 53, 8
-  CONTROL "Estado", -1, "Button", BS_GROUPBOX, 44, 123, 285, 26
+  CONTROL "Forma de pago", -1, "Static", WS_GROUP, 50, 176, 53, 8
+  CONTROL "Estado", -1, "Button", BS_GROUPBOX, 44, 123, 285, 37
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 9, 34, 30
   CONTROL "Sesión", -1, "Static", WS_GROUP, 233, 54, 27, 8
   CONTROL "No incluir en arqueo", 200, "Button", BS_AUTOCHECKBOX, 233, 39, 77, 10
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 150, 285, 92
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 162, 285, 92
+  CONTROL "Código caja", 4001, "Static", WS_GROUP, 50, 148, 43, 8
 }
 
 PREDIV DIALOG DISCARDABLE 140, 65, 598, 216
@@ -15223,23 +15226,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 108, 39, 70, 11
   CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 180, 39, 144, 11
   CONTROL "Contabilizado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 67, 55, 10
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 109, 117, 70, 11
-  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 181, 117, 144, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 108, 79, 70, 11
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 180, 79, 144, 11
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 108, 91, 70, 11
   CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 180, 91, 144, 11
-  CONTROL "A la espera de documentación", 165, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 130, 109, 10
-  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 141, 38, 10
-  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 141, 60, 11
-  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 171, 141, 40, 11
+  CONTROL "A la espera de documentación", 165, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 120, 109, 10
+  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 133, 38, 10
+  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 133, 60, 11
+  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 171, 133, 40, 11
   CONTROL "Cuenta de remesa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 25
   CONTROL "Subcuenta", -1, "Static", WS_GROUP, 50, 82, 43, 8
   CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 56, 285, 51
   CONTROL "Cta. remesa", -1, "Static", WS_GROUP, 50, 42, 43, 8
   CONTROL "Subcta. gastos", -1, "Static", WS_GROUP, 50, 94, 55, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 108, 285, 49
-  CONTROL "Código caja", -1, "Static", WS_GROUP, 51, 120, 43, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 108, 285, 41
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
 }
 
@@ -15359,7 +15359,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
 }
 
-PGO_PRV_1 DIALOG DISCARDABLE 82, 27, 333, 264
+RecibosProveedoresGeneral DIALOG DISCARDABLE 82, 27, 333, 264
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -15369,37 +15369,40 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 267, 76, 36, 11
   CONTROL "", 171, "TBitmap", 0x00800000, 304, 76, 18, 11
   CONTROL "Pagado", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 103, 38, 10
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 101, 70, 11
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 127, 70, 11
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 127, 144, 11
-  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 139, 70, 11
-  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 180, 139, 144, 11
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 166, 216, 11
-  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 179, 216, 11
-  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 193, 38, 10
-  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 191, 70, 11
-  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 180, 191, 40, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 101, 70, 11
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 114, 70, 11
+  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 114, 144, 11
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 140, 70, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 140, 144, 11
+  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 152, 70, 11
+  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 180, 152, 144, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 179, 216, 11
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 192, 216, 11
+  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 206, 38, 10
+  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 204, 70, 11
+  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 180, 204, 40, 11
   CONTROL "No incluir en arqueo", 330, "Button", BS_AUTOCHECKBOX, 239, 39, 77, 10
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 108, 218, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 180, 218, 144, 11
-  CONTROL "Concepto ", -1, "Static", WS_GROUP, 50, 170, 38, 8
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 108, 231, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 180, 231, 144, 11
+  CONTROL "Concepto ", -1, "Static", WS_GROUP, 50, 183, 38, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 50, 79, 40, 8
-  CONTROL "Pagado por", -1, "Static", WS_GROUP, 50, 182, 40, 8
+  CONTROL "Pagado por", -1, "Static", WS_GROUP, 50, 195, 40, 8
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 285, 37
   CONTROL "Importe", -1, "Button", BS_GROUPBOX, 44, 67, 285, 24
-  CONTROL "Estado", -1, "Button", BS_GROUPBOX, 44, 93, 285, 23
-  CONTROL "Subcuenta", -1, "Static", WS_GROUP, 50, 222, 43, 8
-  CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 210, 285, 24
+  CONTROL "Estado", -1, "Button", BS_GROUPBOX, 44, 93, 285, 37
+  CONTROL "Subcuenta", -1, "Static", WS_GROUP, 50, 235, 43, 8
+  CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 223, 285, 24
   CONTROL "Expedición", -1, "Static", WS_GROUP, 50, 42, 40, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 50, 130, 38, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 50, 143, 38, 8
   CONTROL "Vencimiento", -1, "Static", WS_GROUP, 50, 54, 44, 8
-  CONTROL "Forma de pago", -1, "Static", WS_GROUP, 50, 142, 51, 8
-  CONTROL "Proveedor", -1, "Button", BS_GROUPBOX, 44, 118, 285, 38
+  CONTROL "Forma de pago", -1, "Static", WS_GROUP, 50, 155, 51, 8
+  CONTROL "Proveedor", -1, "Button", BS_GROUPBOX, 44, 131, 285, 38
   CONTROL "Divisa", -1, "Static", WS_GROUP, 239, 78, 26, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 335, "Edit", ES_RIGHT|WS_BORDER, 267, 51, 55, 11
   CONTROL "Sesión", -1, "Static", WS_GROUP, 239, 54, 27, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 158, 285, 49
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 171, 285, 49
+  CONTROL "Código caja", 4001, "Static", WS_GROUP, 50, 117, 43, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
