--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13603,7 +13603,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 25, 28, 11
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 25, 55, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 162, 25, 18, 11
-  CONTROL "Agregar registros", -1, "Button", BS_GROUPBOX, 2, 2, 382, 39
+  CONTROL "Rango", -1, "Button", BS_GROUPBOX, 2, 2, 382, 39
   CONTROL "Inicio", -1, "Static", WS_GROUP, 8, 15, 36, 8
   CONTROL "Fin", -1, "Static", WS_GROUP, 8, 28, 35, 8
   CONTROL "Formato de etiquetas", -1, "Button", BS_GROUPBOX, 2, 44, 382, 53
@@ -15359,7 +15359,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
 }
 
-RecibosProveedoresGeneral DIALOG DISCARDABLE 82, 27, 333, 264
+RECIBOSPROVEEDORESGENERAL DIALOG DISCARDABLE 82, 27, 333, 264
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
