--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15566,35 +15566,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "Contactos", -1, "Button", BS_GROUPBOX, 44, 29, 448, 220
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Personas de contacto, responsable de compras, contabilidad, comerciales, etc.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "&Llamar ahora", 504, "Button", WS_TABSTOP, 438, 41, 50, 14
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-CONTACTOS DIALOG DISCARDABLE 51, -26, 289, 163
+CONTACTOS DIALOG DISCARDABLE 51, -26, 289, 218
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 77, 12, 203, 12
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 25, 203, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 38, 203, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 77, 51, 50, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 64, 202, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 77, 80, 80, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 77, 93, 80, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 77, 106, 80, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 77, 119, 202, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 180, 142, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 235, 142, 50, 14
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 77, 12, 203, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 24, 203, 11
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 36, 203, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 77, 48, 50, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 60, 202, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 77, 75, 80, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 77, 87, 80, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 77, 99, 80, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 77, 111, 202, 11
+  CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 77, 126, 202, 34
+  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 77, 177, 60, 11
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 138, 177, 28, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 180, 200, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 235, 200, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 16, 52, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 29, 52, 8
-  CONTROL "Población", -1, "Static", WS_GROUP, 8, 42, 52, 8
-  CONTROL "Código postal ", -1, "Static", WS_GROUP, 8, 55, 50, 8
-  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 84, 33, 8
-  CONTROL "Fax", -1, "Static", WS_GROUP, 8, 110, 17, 8
-  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 2, 282, 134
-  CONTROL "Móvil", -1, "Static", WS_GROUP, 8, 97, 22, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 68, 35, 8
-  CONTROL "Correo electrónico", -1, "Static", WS_GROUP, 8, 123, 63, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 28, 52, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 8, 40, 52, 8
+  CONTROL "Código postal ", -1, "Static", WS_GROUP, 8, 52, 50, 8
+  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 79, 33, 8
+  CONTROL "Fax", -1, "Static", WS_GROUP, 8, 103, 17, 8
+  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 2, 282, 161
+  CONTROL "Móvil", -1, "Static", WS_GROUP, 8, 91, 22, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 64, 35, 8
+  CONTROL "Correo electrónico", -1, "Static", WS_GROUP, 8, 115, 63, 8
+  CONTROL "Llamada", -1, "Button", BS_GROUPBOX, 3, 165, 282, 31
+  CONTROL "Última llamada", -1, "Static", WS_GROUP, 8, 181, 51, 8
+  CONTROL "", 192, "TBtnBmp", 0x00000000, 64, 177, 12, 11
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 8, 129, 63, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
