--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16268,13 +16268,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Formatos", -1, "Button", BS_GROUPBOX, 4, 63, 316, 36
 }
 
-PAGEINI DIALOG DISCARDABLE 61, 21, 355, 270
+PAGEINI DIALOG DISCARDABLE 61, 21, 355, 285
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Gestión de cartera"
 FONT 10, "MS Sans Serif Light"
 {
-  CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 4, 347, 256
-  CONTROL "", 210, "msctls_progress32", 0x00000000, 3, 262, 346, 4
+  CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 4, 347, 254
+  CONTROL "", 210, "msctls_progress32", 0x00000000, 3, 280, 346, 4
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 299, 263, 50, 14
 }
 
 PAGEINI_01 DIALOG DISCARDABLE 21, 20, 461, 303
@@ -16288,17 +16289,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Todos", 140, "Button", WS_TABSTOP, 50, 82, 50, 14
   CONTROL "Ninguno", 150, "Button", WS_TABSTOP, 105, 82, 50, 14
   CONTROL "Seleccionar", 160, "Button", WS_TABSTOP, 161, 82, 50, 14
-  CONTROL "&Aceptar [F5]", 510, "Button", WS_TABSTOP, 350, 285, 50, 14
-  CONTROL "&Salir", 520, "Button", WS_TABSTOP, 405, 285, 50, 14
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 300, 32
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Recibos de clientes por fecha de vencimiento.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 151, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 165, 54, 22, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 254, 54, 21, 8
-  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 211
+  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 227
   CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 217, 82, 50, 14
   CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 347, 37, 107, 32
-  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 179
+  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 195
 }
 
 PAGEINI_02 DIALOG DISCARDABLE 21, 20, 461, 303
@@ -16313,16 +16312,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ninguno", 150, "Button", WS_TABSTOP, 105, 82, 50, 14
   CONTROL "Seleccionar", 160, "Button", WS_TABSTOP, 161, 82, 50, 14
   CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 217, 82, 50, 14
-  CONTROL "&Aceptar [F5]", 510, "Button", WS_TABSTOP, 350, 285, 50, 14
-  CONTROL "&Salir", 520, "Button", WS_TABSTOP, 405, 285, 50, 14
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pagos a proveedor por fecha de vencimiento.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 149, 8
-  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 211
+  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 230
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 300, 32
   CONTROL "Desde", -1, "Static", WS_GROUP, 168, 54, 22, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 258, 54, 21, 8
   CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 347, 37, 107, 32
-  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 179
+  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 199
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -19504,5 +19501,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impresión de series de documentos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 116, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 400, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 44, 242, 380, 122
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+PAGEINI_03 DIALOG DISCARDABLE 21, 20, 461, 303
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "&Añadir", 100, "Button", WS_TABSTOP, 50, 48, 50, 14
+  CONTROL "&Modificar", 110, "Button", WS_TABSTOP, 105, 48, 50, 14
+  CONTROL "&Eliminar", 120, "Button", WS_TABSTOP, 161, 48, 50, 14
+  CONTROL "Incidencias", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 409, 264
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Incidencias de clientes", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 151, 8
+  CONTROL "Zoom", 130, "Button", WS_TABSTOP, 217, 48, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 50, 65, 401, 231
 }
 
